# my_books_api

./: database.py  main.py  models.py  package.json  pyproject.toml
frontend/: package.json
frontend/src/: App.jsx
frontend/src/components/: Books.jsx  NavBar.jsx
routers/: author.py  book.py
