[tool.poetry]
name = "my-books"
version = "0.1.0"
description = ""
authors = ["Patrick van der Flier <patrick@corverdevelopment.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
black = "^24.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

